--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/TaoK/poor-mans-t-sql-formatter-npm-package#readme",
   "devDependencies": {
     "chai": "4.1.2",
+    "fs-extra": "4.0.2",
     "mocha": "4.0.1"
   }
 }
