--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poor-mans-t-sql-formatter",
-  "version": "1.6.2",
+  "version": "1.6.3",
   "description": "A T-SQL formatting library in JS, transpiled from the C# library of the same name",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
   "keywords": [
     "sql",
     "formatter",
+    "sql formatter",
     "tsql",
     "formatting",
     "minimizer",
